{
    "name": "InputMapping",
    "maps": [
        {
            "name": "Game",
            "id": "65ac26fd-cd8d-45ae-a7d9-3c5ae38672aa",
            "actions": [
                {
                    "name": "StepForward",
                    "type": "Button",
                    "id": "97518737-f6e5-4e52-b2f7-e53d1d2fc506",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "Auto",
                    "type": "Button",
                    "id": "92a46dc0-453a-4666-9de8-883c06876c65",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "Save",
                    "type": "Button",
                    "id": "85569b9c-0c57-4872-8a36-f99714b4e4fd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "Load",
                    "type": "Button",
                    "id": "a92328a6-5459-4764-be99-02e914f88d25",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "QuickSave",
                    "type": "Button",
                    "id": "627177ba-de96-4285-a826-a5df6e6815fc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "QuickLoad",
                    "type": "Button",
                    "id": "c9c9db54-8ca8-49ab-b089-2ce20add2fcf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleDialogue",
                    "type": "Button",
                    "id": "9c2946bf-47fe-46f6-ab70-58e3b18b337c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "ShowLog",
                    "type": "Button",
                    "id": "544b3e00-c037-40d4-803e-3494c1bec7f3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "ShowConfig",
                    "type": "Button",
                    "id": "ec8814f7-fe10-4ff6-974d-7c9b1bf05f80",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "ReturnTitle",
                    "type": "Button",
                    "id": "c66b99b6-59d8-4203-ac1b-5ca9140e2942",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "EditorBackward",
                    "type": "Button",
                    "id": "e2429f1d-13f3-42b4-b49c-f0c8c5147f65",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "EditorBeginChapter",
                    "type": "Button",
                    "id": "552f0aa8-31f3-402f-937f-f84b87dd516b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "EditorPreviousChapter",
                    "type": "Button",
                    "id": "eb4090c5-6384-4c4e-bc12-a358bbb1fa6e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "EditorNextChapter",
                    "type": "Button",
                    "id": "daee26a0-50bb-4746-a9de-39ef9517e1a6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "EditorReloadScripts",
                    "type": "Button",
                    "id": "57a915be-4fe8-4ce0-a5b1-30432e1fed4a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5362a006-d294-4d89-827b-d789d73a8b9c",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StepForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5acc9ceb-9d7e-48a6-b9ce-24b7cc14cb43",
                    "path": "<Keyboard>/numpadEnter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StepForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "420ecd55-0df9-4d09-85d0-8b22e2bf0548",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StepForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f404172-ba2b-436d-9d5c-01d98f682bba",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StepForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "feade573-fff2-41dd-bd5c-bb46cfc47039",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Auto",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a2f14355-a8c3-4cf1-ab58-418da3df5f21",
                    "path": "<Keyboard>/f2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Save",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1f9d881f-a173-41ee-971e-d71410cf0225",
                    "path": "<Keyboard>/f3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Load",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "36c4d00d-fb1a-4cbe-8f77-fc78b65a8232",
                    "path": "<Keyboard>/f9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "QuickSave",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "09b717e5-ac69-44c7-aabd-7e9281d379e6",
                    "path": "<Keyboard>/f10",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "QuickLoad",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8c3de28e-b588-42e0-8d28-a985558f3268",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleDialogue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ea5e4dda-97b4-43d8-b433-aa4a3eab5bc5",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShowLog",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3bb483e3-d685-46dc-aefc-24a6382c7134",
                    "path": "<Keyboard>/rightBracket",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EditorNextChapter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bee06911-ee1f-4e66-a466-a61ef72e14b8",
                    "path": "<Keyboard>/leftBracket",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EditorPreviousChapter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5294cb74-2d3a-44b8-82ea-b88961e4afa8",
                    "path": "<Keyboard>/equals",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EditorBeginChapter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "27a97de2-5244-4603-822d-fa449280960a",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EditorBackward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2d2314ed-fa62-4b96-8fd1-f0c8445dd1f5",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EditorReloadScripts",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "92bf9db5-1b27-40b7-9488-2c562e0888b8",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ReturnTitle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c479d84e-2332-4a57-a18c-92a66f77fe7e",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShowConfig",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "GameHold",
            "id": "acfde6a6-59ea-4ffb-831c-700c4aa3b5e1",
            "actions": [
                {
                    "name": "QuitGame",
                    "type": "Button",
                    "id": "86e11927-ae0f-4119-9fcf-b4a7f85785be",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "286710f5-7f7a-4e67-9c7e-f8f1445d2060",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "QuitGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "GamePress",
            "id": "98122892-a6f4-4864-847c-cf8f1c4df8a4",
            "actions": [
                {
                    "name": "FastForward",
                    "type": "Button",
                    "id": "304a877d-49ab-4190-a7fc-14fcf02aa8ef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c8ace76c-8af3-4f56-b44c-90edc44d64dc",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FastForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "4e08a8e8-86e4-410b-9f73-bfad090db1b9",
            "actions": [
                {
                    "name": "LeaveView",
                    "type": "Button",
                    "id": "619a9afb-57ff-40d0-bdd2-e72d1959274e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "EditorUnlock",
                    "type": "Button",
                    "id": "d67d6497-da0c-4e11-996f-a4d56a93c03b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4793c7e1-6f36-4028-9194-7eca7a7265c5",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeaveView",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f3560323-1151-4dae-bc18-888f0945785b",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EditorUnlock",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Always",
            "id": "15432f44-28e6-4444-98f2-02660e8764e3",
            "actions": [
                {
                    "name": "ToggleFullScreen",
                    "type": "Button",
                    "id": "55d742f2-1c5d-40e5-8984-6be8a8a681c6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchLanguage",
                    "type": "Button",
                    "id": "e9a9be43-64eb-4bf4-b12e-4bfd01a50253",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d125ba94-d955-47b1-9b3f-b3b88108beb5",
                    "path": "<Keyboard>/f11",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleFullScreen",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5b7dc04c-d3fd-4df1-9727-59681c32d94a",
                    "path": "<Keyboard>/slash",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchLanguage",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}